--- a/src/templates/django_05.html
+++ b/src/templates/django_05.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Info</title>
 </head>
 <body>
+    <form action="/form" method="post">
+        <p>Enter you First Name</p>
+        <p><input type="text" name="firstname"></p>
+        <p>Enter you Last Name</p>
+        <p><input type="text" name="lastname"></p>
+        <p>Enter you Old</p>
+        <p><input type="number" name="old"></p>
+        <p><input type="submit" value="Enter"></p>
+    </form>
 
 </body>
 </html>
