--- a/templates/change_group.html
+++ b/templates/change_group.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main</title>
+    <title>Change</title>
 </head>
 <body>
-    <form action="{{ url_for('create_group') }}" method="post">
+    <form action="{{ url_for('change_group', my_id = group.id) }}" method="post">
         <p>Enter you fullname</p>
         <p><input type="text" name="fullname"></p>
         <p><input type="submit" value="Enter"></p>
