--- a/templates/display_all.html
+++ b/templates/display_all.html
@@ -7,16 +7,28 @@
 <body>
     <table border=1>
         <tr>
-            <td>id</td>
-            <td>fullname</td>
+            <td><div align="center">Id</div></td>
+            <td><div align="center">Fullname</div></td>
+            <td><div align="center">Other</div></td>
         </tr>
         {% for group in groups %}
         <tr>
-            <td>{{ group.id }}</td>
-            <td>{{ group.fullname }}</td>
+            <td><div align="center">{{ group.id }}</div></td>
+            <td><div align="center">{{ group.fullname }}</div></td>
+            <td>
+                <form action="{{ url_for('change_group', my_id = group.id) }}">
+                    <button>Change</button>
+                </form>
+                <form action="{{ url_for('del_group', my_id = group.id) }}">
+                    <button>Del</button>
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </table>
-    <a href="{{ url_for('create_group') }}">CREATE</a>
+    <p></p>
+    <form action="{{ url_for('create_group') }}">
+        <button>Create new group</button>
+    </form>
 </body>
 </html>
