--- a/templates/create_group.html
+++ b/templates/create_group.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <title>Main</title>
 </head>
+<style>
+    body {
+    background : url(https://lh3.googleusercontent.com/proxy/bpoKueiiV4MEiYXLZt4Isn00VMNGPukUhobikFZ8gMwEPR1wZFvbBipUj1Y_Fciy8JaYUZ58NsCekNlCQVv1jB3gW0_m9xKIHKzn782QNPb1M0IVFA),
+    url(https://lh3.googleusercontent.com/proxy/PalRxtCRIPGy0_Zeb1UdVdxtC96n9xPDTfNrmgEnVbh8EZu6Epw_iA_EWZ8iwCdUhltVn3Y9hmm0vsOUGqd2WSWJ26YkCh465ZzWJg);
+    background-repeat: no-repeat;
+    background-attachment: scroll, scroll;
+    background-position: 0% 0%, 100% 0%;
+    }
+</style>
 <body>
-    <form action="{{ url_for('create_group') }}" method="post">
-        <p>Enter you fullname</p>
-        <p><input type="text" name="fullname"></p>
-        <p><input type="submit" value="Enter"></p>
-    </form>
+    <div align="center">
+        <form action="{{ url_for('create_group') }}" method="post">
+            <p>Enter you fullname</p>
+            <p><input type="text" name="fullname"></p>
+            <p><input type="submit" value="Enter"></p>
+        </form>
+    </div>
 </body>
 </html>
