--- a/templates/create_group.html
+++ b/templates/create_group.html
@@ -6,8 +6,8 @@
 </head>
 <style>
     body {
-    background : url(https://lh3.googleusercontent.com/proxy/bpoKueiiV4MEiYXLZt4Isn00VMNGPukUhobikFZ8gMwEPR1wZFvbBipUj1Y_Fciy8JaYUZ58NsCekNlCQVv1jB3gW0_m9xKIHKzn782QNPb1M0IVFA),
-    url(https://lh3.googleusercontent.com/proxy/PalRxtCRIPGy0_Zeb1UdVdxtC96n9xPDTfNrmgEnVbh8EZu6Epw_iA_EWZ8iwCdUhltVn3Y9hmm0vsOUGqd2WSWJ26YkCh465ZzWJg);
+    background : url(http://delaemvmeste.by/wp-content/uploads/2014/01/student.jpg),
+    url(http://muzotkrytka.narod.ru/Tatyanin_den/student.png);
     background-repeat: no-repeat;
     background-attachment: scroll, scroll;
     background-position: 0% 0%, 100% 0%;
