--- a/templates/change_group.html
+++ b/templates/change_group.html
@@ -6,8 +6,8 @@
 </head>
 <style>
     body {
-    background : url(http://delaemvmeste.by/wp-content/uploads/2014/01/student.jpg),
-    url(http://muzotkrytka.narod.ru/Tatyanin_den/student.png);
+    background : url(https://i.ibb.co/QjDvwbV/student.jpg),
+    url(https://i.ibb.co/DMV8HWy/student.png);
     background-repeat: no-repeat;
     background-attachment: scroll, scroll;
     background-position: 0% 0%, 100% 0%;
