--- a/templates/display_all.html
+++ b/templates/display_all.html
@@ -6,8 +6,8 @@
 </head>
 <style>
     body {
-    background : url(https://i.ibb.co/QjDvwbV/student.jpg),
-    url(https://i.ibb.co/DMV8HWy/student.png);
+    background : url(../statics/student.jpg),
+    url(../statics/student.png);
     background-repeat: no-repeat;
     background-attachment: scroll, scroll;
     background-position: 0% 0%, 100% 0%;
