--- a/templates/display_all.html
+++ b/templates/display_all.html
@@ -29,7 +29,7 @@
                     <form action="{{ url_for('change_group', my_id = group.id) }}">
                         <button>Change</button>
                     </form>
-                    <form action="{{ url_for('del_group', my_id = group.id) }}">
+                    <form method="post" action="{{ url_for('del_group', my_id = group.id) }}">
                         <button>Del</button>
                     </form>
                 </td>
